# frothiq-control-center

./: .env.example  .gitignore  frothiq-control-center.service  main.py  pyproject.toml  pytest.ini  requirements.txt
.claude/skills/: frappe_v16_enforced_production.yaml
frothiq_control_center/: __init__.py
frothiq_control_center/api/: __init__.py  routes_analytics.py  routes_anomaly.py  routes_apache_logs.py  routes_audit.py  routes_auth.py  routes_autoupdate.py  routes_bandwidth.py  routes_billing.py  routes_bing.py  routes_clamav.py  routes_commands.py  routes_converter.py  routes_dashboard.py  routes_defense.py  routes_dev_reports.py  routes_disk_quotas.py  routes_dns_checker.py  routes_edge.py  routes_enrollment.py  routes_envelope.py  routes_fail2ban.py  routes_flywheel.py  routes_frappe.py  routes_frothiq_nft.py  routes_integrity.py  routes_license.py  routes_logrotate.py  routes_mail.py  routes_mail_aliases.py  routes_mail_quotas.py  routes_mailjet.py  routes_mfa.py  routes_monetization.py  routes_object_storage.py  routes_packages.py  routes_policy.py  routes_predictive.py  routes_propagation.py  routes_rbl.py  (+17 more)
frothiq_control_center/auth/: dependencies.py  jwt_handler.py  password.py
frothiq_control_center/billing/: billing_event_publisher.py  billing_sync_client.py  billing_sync_webhook.py  license_state_cache.py  subscription_state_machine.py
mc2/: __init__.py
mc2/api/: __init__.py  (+62 more)
tests/: conftest.py  test_auth_rbac.py  test_control_center_api.py  test_control_center_boundary_enforcement.py  test_services.py  test_websocket_streams.py
(+106 files in other folders)
