[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mc2-backend"
version = "1.0.0"
description = "OrbWeaver MC² — Master Control Console backend"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mc2"]
omit = ["*/tests/*", "*/conftest.py"]
